--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tailwindcss -i ./SrcStyles/inputStyle.css -o ./PublicStyles/tailwindStyle.css --watch"
   },
   "keywords": [],
   "author": "",
